# goose-search-engine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.h  docker-compose.yml  main.cpp  nginx.conf
api/: index.js  package-lock.json  package.json
compress/: delta.cpp  delta.h  varbyte.cpp  varbyte.h
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: app.js  index.js
frontend/src/components/header/: index.jsx  styles.css
frontend/src/components/logo/: index.jsx  styles.css
frontend/src/components/search-bar/: index.jsx  styles.css
frontend/src/components/search-list/: index.jsx  styles.css
frontend/src/hooks/: use-query.js
frontend/src/pages/: home.jsx  search.jsx
index/: list.cpp  list.h  merge.cpp  merge.h  parse.cpp  parse.h
query/: search.cpp  search.h  snippet.cpp  snippet.h
util/: aho_corasick.cpp  aho_corasick.h  bm25.cpp  bm25.h  doc_info.cpp  doc_info.h  inverted_list.cpp  inverted_list.h  lexicon.cpp  lexicon.h  radix_tree.cpp  radix_tree.h
